force-app/main/default/objects/CRM_Asset_Event__e/CRM_Asset_Event__e.object-meta.xml
<CustomObject>
    <description>Pubilshes platform event on asset create/update</description>
    <label>CRM Asset Event</label>
    <pluralLabel>CRM Asset Events</pluralLabel>
</CustomObject>