force-app/main/default/objects/CRM_Asset_Event__e/fields/Asset_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Event_Type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Describes Type of event Asset create/update</description>
    <label>Asset Event Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>