force-app/main/default/objects/CRM_Asset_Event__e/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Id of Asset which is created/updated</description>
    <label>Asset ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>