force-app/main/default/objects/CRM_Asset_Event__e/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Order related to Asset</description>
    <label>Order ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>